Modulo administrador-configuración-empresas

--- a/app/intro/page.mdx
+++ b/app/intro/page.mdx
@@ -1,7 +1,7 @@
 # Introducción
 
-Este la documentacion del software de **IPSmultisalud**, donde podra consultar todo acerca de su funcionamiento.
-
+Esta es la documentación del software de **IPSmultisalud**, donde podra consultar todo acerca de su funcionamiento.
+|
 ## Configuración inicial
 
 Primero iremos a la [configuración inicial](/configuracion/paso1/creacionSuperAdmin) 
