Modulo administrador /configuración/operadores

--- a/app/inicio/configuracion/paso2/asignarSede/page.mdx
+++ b/app/inicio/configuracion/paso2/asignarSede/page.mdx
@@ -1,4 +1,4 @@
-# Asignar sede a super admin
+# Asignción de sedes
 
 - Para asignar la nueva empresa al super admin se ingresa a la opción “Operadores”.
 
