--- a/app/inicio/configuracion/paso2/creacionSede/page.mdx
+++ b/app/inicio/configuracion/paso2/creacionSede/page.mdx
@@ -1,4 +1,4 @@
-# Creación sede
+# Creación de sedes
 
 - Para continuar con la configuración asignaremos una sede de la empresa cliente al operador super admin. En el menú principal a la izquierda de la pantalla se encuentra el botón “Sedes” para ingresar a esta opción.
 
