--- a/app/moduloAdministrador/configuracion/empresas/page.mdx
+++ b/app/moduloAdministrador/configuracion/empresas/page.mdx
@@ -44,11 +44,11 @@ El campo de búsqueda permite listar empresas a partir de un **nombre**, **direc
 ### Filtros
 Además, se pueden aplicar los siguientes filtros:
 
-1. Filtro por estado: permite filtrar por Todos, Activos o Inactivos.
+1. Filtro por **estado**: permite filtrar por Todos, Activos o Inactivos.
 
 ![Filtro por estado](/filtroEstado.webp)
 
-2. Filtro Ordenar por: Permite filtrar por antiguedad.
+2. Filtro **Ordenar por**: Permite filtrar por antiguedad.
 
 ![Filtro ordenar por](/filtroOrdenar.webp)
 
