--- a/app/inicio/configuracion/paso1/creacionSuperAdmin/page.mdx
+++ b/app/inicio/configuracion/paso1/creacionSuperAdmin/page.mdx
@@ -1,4 +1,4 @@
-# Creacion de admin
+# Creación de admin
 
 - Para empezar la configuración de un **nuevo cliente** primero se crea un administrador con todos los permisos, este registro se insertará por medio de Postman.
 
