Modulo administrador /configuración/sedes

--- a/app/moduloAdministrador/configuracion/operadores/page.mdx
+++ b/app/moduloAdministrador/configuracion/operadores/page.mdx
@@ -5,14 +5,26 @@ En esta opción se podrá configurar a detalle cada operador que haga parte del 
 ## Ingreso a la opción
 
 Para acceder, debes ingresar a la opción de “Operadores”:
-
-![Opcion operadores](/opcionOperadores.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/opcionOperadores.webp"
+    alt="Opción operadores"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Crear operador   
 
 Dentro de la opción de "Operador", se encuentra disponible un botón con el texto "Nuevo operador". 
-
-![Nuevo operador](/nuevoOperador.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/nuevoOperador.webp"
+    alt="Nuevo operador"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 Al hacer clic en este botón, se abrirá el siguiente formulario que permite la entrada de datos para la creación de un nuevo operador:
 
@@ -29,38 +41,81 @@ Al hacer clic en este botón, se abrirá el siguiente formulario que permite la 
 - **Contraseña (Obligatorio).**
 - **Sede (Campo de búsqueda, obligatorio).**
 
-![Formulario operador](/formularioOperador.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/formularioOperador.webp"
+    alt="Formulario operador"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Buscar operador
 
 Dentro de la opción, el campo de búsqueda permite listar operadores  a partir de un nombre, teléfono o correo que se digite:
-
-![buscar operador](/buscarOperador.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/buscarOperador.webp"
+    alt="Buscar operador"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ### Filtros
 Además, se pueden aplicar los siguientes filtros:
 
 1. Filtro por **Estado**: permite filtrar por ***Todos***, ***Activos*** o ***Inactivos***.
 
-![filtrar operador por estado](/filtrarOperadorEstado.webp)
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/filtrarOperadorEstado.webp"
+    alt="Filtrar operador por estado"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 2. Filtro **Ordenar por**: permite filtrar por antigüedad.
 
-![filtrar operador por orden de antiguedad](/ordenarPorAntiguedad.webp)
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/ordenarPorAntiguedad.webp"
+    alt="Filtrar operador por orden de antigüedad"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 Los resultados de la búsqueda se mostrarán en la tabla principal de la opción, facilitando la visualización y gestión de los diferentes operadores:
-
-![Resultado de las búsquedas](/resultadoBusquedaOperador.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/resultadoBusquedaOperador.webp"
+    alt="Resultado de las búsquedas"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Editar operador
 
 Una vez localizado el operador en la tabla de resultados, se encontrará un botón ubicado en el extremo derecho de la fila correspondiente.
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/editarOperador.webp"
+    alt="Botón para editar la información de los operadores"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
-![Botón para editar la información de los operadores](/editarOperador.webp)
-
-Al hacer clic en este botón, se abrirá un formulario que mostrará la información detallada del registro seleccionado, permitiendo al usuario editar su información:
-
-![formulario editar la información de los operadores](/formularioEditarOperador.webp)
+Al hacer clic en este botón, se abrirá un formulario que mostrará la información detallada del registro seleccionado, permitiendo al usuario editar su información.
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/formularioEditarOperador.webp"
+    alt="Formulario editar la información de los operadores"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Asignar permisos 
 
@@ -68,24 +123,57 @@ En el formulario de edición en la pestaña “Permisos”, se gestionan los per
 
 * [crear permisos](/moduloAdministrador/seguridad/permisos): en este link podrá aprender a crear permisos.
 
-![buscar permisos por descripción](/buscarPermisos.webp)
+<br />
+<div style={{ maxWidth: '500px', margin: '0 auto' }}>
+  <img
+    src="/buscarPermisos.webp"
+    alt="Buscar permisos por descripción"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ### Búsqueda
 En este campo podrá buscar por descripción los permisos que desee asignar al operador, una vez desplegados los resultados selecciona el permiso y el sistema lo asigna automáticamente:
-
-![Selección de permisos que va a tener el operador](/seleccionPermisos.webp)
+<br />
+<div style={{ maxWidth: '500px', margin: '0 auto' }}>
+  <img
+    src="/seleccionPermisos.webp"
+    alt="Selección de permisos que va a tener el operador"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ### Gestión
 En la parte inferior el sistema lista todos los permisos que el operador tiene asignados, en donde podrá, según la necesidad, eliminar algún permiso:
-
-![Eliminar permisos del operador0](/eliminarPermiso.webp)
+<br />
+<div style={{ maxWidth: '500px', margin: '0 auto' }}>
+  <img
+    src="/eliminarPermiso.webp"
+    alt="Eliminar permisos del operador"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Cambiar estado de un operador
 
 En la fila correspondiente al operador encontrado, se ubicará un interruptor (switch) al final de la misma. Este interruptor permite cambiar el estado del registro seleccionado, donde la posición de la derecha indica el estado activo y el izquierdo inactivo:
 
-### activo
-![interruptor de operador activo](/operadorActivo.webp)
+**Activo:**
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/operadorActivo.webp"
+    alt="Interruptor de operador activo"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
-### inactivo
-![interruptor de empresa inactivo](/operadorInactivo.webp)
+**Inactivo:**
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/operadorInactivo.webp"
+    alt="Interruptor de operador inactivo"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
