--- a/app/moduloAdministrador/configuracion/empresas/page.mdx
+++ b/app/moduloAdministrador/configuracion/empresas/page.mdx
@@ -4,14 +4,26 @@ En esta opción se podrá configurar a detalle cada empresa que haga parte del g
 
 ## Ingreso a la opción 
 Para acceder, debes ingresar a la opción de “Empresas”:
-
-![apartado empresas](/empresas.webp)
+<br />
+<div style={{ maxWidth: '800px', margin: '0 auto' }}>
+  <img
+    src="/empresas.webp"
+    alt="Apartado empresas"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Crear empresa
 
 Dentro de la opción de **Empresas**, se encuentra disponible un botón con el texto **Nueva empresa**. 
-
-![Nueva empresa](/nuevaEmpresa.webp)
+<br />
+<div style={{ maxWidth: '800px', margin: '0 auto' }}>
+  <img
+    src="/nuevaEmpresa.webp"
+    alt="Nueva empresa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite la entrada de datos para la creación de una nueva empresa:
 
@@ -33,45 +45,102 @@ Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite
 - **Dominio(Obligatorio):** Dirección URL de dominio.
 - **Logo(Obligatorio):** URL tipo http en el cual esta alojado el logo que usara cada empresa.
 
-![Formulario Empresa](/formularioEmpresaVacio.webp)
+<br />
+<div style={{ maxWidth: '600px', margin: '0 auto' }}>
+  <img
+    src="/formularioEmpresaVacio.webp"
+    alt="Formulario Empresa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Buscar empresa
 
 El campo de búsqueda permite listar empresas a partir de un **nombre**, **dirección**, **teléfono** o **correo** que se digite:
-
-![Buscar empresa](/buscarEmpresa.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/buscarEmpresa.webp"
+    alt="Buscar empresa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ### Filtros
 Además, se pueden aplicar los siguientes filtros:
 
 1. Filtro por **estado**: permite filtrar por Todos, Activos o Inactivos.
 
-![Filtro por estado](/filtroEstado.webp)
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/filtroEstado.webp"
+    alt="Filtro por estado"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 2. Filtro **Ordenar por**: Permite filtrar por antiguedad.
 
-![Filtro ordenar por](/filtroOrdenar.webp)
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/filtroOrdenar.webp"
+    alt="Filtro ordenar por"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 Los resultados de la búsqueda se mostrarán en la tabla principal de la opción, facilitando la visualización y gestión de las diferentes empresas:
-
-![Resultados del filtro](/resultadoFiltro.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/resultadoFiltro.webp"
+    alt="Resultados del filtro"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Editar empresa 
 
 Una vez localizada la empresa deseada en la tabla de resultados, se encontrará un botón ubicado en el extremo derecho de la fila correspondiente.
-
-![Boton editar empresa](/editarEmpresa.webp)
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/editarEmpresa.webp"
+    alt="Botón editar empresa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 Al hacer clic en este botón, se abrirá un formulario que mostrará la información detallada del registro seleccionado, permitiendo al usuario editar su información.
-
-![Formulario para editar empresa](/formularioEditarEmpresa.webp)
+<br />
+<div style={{ maxWidth: '600px', margin: '0 auto' }}>
+  <img
+    src="/formularioEditarEmpresa.webp"
+    alt="Formulario para editar empresa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
 ## Cambiar estado de una empresa
 
 En la fila correspondiente a la empresa encontrada, se ubicará un **interruptor** (switch) al final de la misma. Este **interruptor** permite cambiar el estado del registro seleccionado, donde la posición de la derecha indica el estado activo y el izquierdo inactivo:
 
-### activo
-![interruptor de empresa activa](/empresaActiva.webp)
+**Activo:**
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/empresaActiva.webp"
+    alt="Interruptor de empresa activa"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
 
-### inactivo
-![interruptor de empresa inactiva](/empresaInactiva.webp)
+**Inactivo:**
+<br />
+<div style={{ maxWidth: '700px', margin: '0 auto' }}>
+  <img
+    src="/empresaInactiva.webp"
+    alt="Interruptor de empresa inactiva"
+    style={{ width: '100%', borderRadius: '8px' }}
+  />    
+</div>
