--- a/app/inicio/configuracion/paso2/asignarSede/page.mdx
+++ b/app/inicio/configuracion/paso2/asignarSede/page.mdx
@@ -1,15 +1,49 @@
+import Image from 'next/image'
+import Zoom from 'react-medium-image-zoom'
+import 'react-medium-image-zoom/dist/styles.css'
+
 # Asignción de sedes
 
 - Para asignar la nueva empresa al super admin se ingresa a la opción “Operadores”.
 
-![boton operadores](/botonOperadores.webp)
+<div className="image-zoom-wrapper">
+  <Zoom>
+    <Image
+      src="/botonOperadores.webp"
+      alt="boton operadores"
+      width={800}
+      height={300}
+      unoptimized
+    />
+  </Zoom>
+</div>
 
 - En la tabla estará listado el registro del operador super admin con el que se ha trabajado hasta el momento, encaso de haber más se puede buscar y filtrar por el nombre o documento. Se abre el formulario de edición de nuestro registro con el botón ubicado en el extremo derecho de su fila.
 
-![boton formulario](/botonFormulario.webp)
+<div className="image-zoom-wrapper">
+  <Zoom>
+    <Image
+      src="/botonFormulario.webp"
+      alt="boton formulario"
+      width={800}
+      height={300}
+      unoptimized
+    />
+  </Zoom>
+</div>
 
 - En el formulario de creación y edición habrá un campo de filtrado donde buscaremos la opcion con la sede previamente creada.
 
-![asignacion sede ](/sedePreviamenteCreada.webp)
+<div className="image-zoom-wrapper">
+  <Zoom>
+    <Image
+      src="/sedePreviamenteCreada.webp"
+      alt="asignacion sede "
+      width={800}
+      height={300}
+      unoptimized
+    />
+  </Zoom>
+</div>
 
 ***Una vez que se ha asignado la sede al operador, la configuración inicial se completa, lo que permite acceder a todas las funcionalidades del aplicativo según las necesidades.***
